# video_human_detection

./: README.md  example.ipynb  pyproject.toml  requirements.txt  run.ipynb
video_human_detection/: detect.py  main.py  render.py  run.py
