[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "video_human_detection"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2",
    "ultralytics>=8.3",
    "numpy>=1.26",
    "opencv-python>=4.10",
]

[tool.setuptools]
packages = ["video_human_detection"]

